test/files/invalid/root_type_twice.stderr
error: Cannot set root_type twice
  ┌─ test/files/invalid/root_type_twice.fbs:5:1
  │
5 │ root_type X;
  │ ^^^^^^^^^^^^ first declaration was here
6 │ root_type Y;
  │ ^^^^^^^^^^^^ additional declaration was here

